--- a/scss/_inicio.scss
+++ b/scss/_inicio.scss
@@ -59,7 +59,7 @@
 
 .foto1 {
     grid-area: foto1; 
-    background-image: url("../multimedia/destacadoMaiara\ \(2\).jpg");
+    background-image: url("../multimedia/destacadoMaiara.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
