--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -64,21 +64,21 @@
     }
     .foto1{
         margin: 5px 10px 5px 10px;
-        background-image: url(../multimedia/destacadoMaiaraHor.png);
+        background-image: url(../multimedia/destacadoMaiaraHor.jpg);
         &:hover{
             background-image: url("../multimedia/MaiaraGifChico.jpg");
         }
     }
 
     .foto2{
-        background-image: url(../multimedia/destacadoHenrJuHor.png);
+        background-image: url(../multimedia/destacadoHenrJuHor.jpg);
         &:hover{
             background-image: url("../multimedia/HenrGifChico.jpg");
         }
     }
 
     .foto3{
-        background-image: url(../multimedia/destacadoLuanHor.png);
+        background-image: url(../multimedia/destacadoLuanHor.jpg);
         &:hover{
             background-image: url("../multimedia/LuanGifChico.jpg");
         }
