--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -66,28 +66,28 @@
         margin: 5px 10px 5px 10px;
         background-image: url(../multimedia/destacadoMaiaraHor.jpg);
         &:hover{
-            background-image: url("../multimedia/MaiaraGifChico.jpg");
+            background-image: url("../multimedia/MaiaraGifChico.gif");
         }
     }
 
     .foto2{
         background-image: url(../multimedia/destacadoHenrJuHor.jpg);
         &:hover{
-            background-image: url("../multimedia/HenrGifChico.jpg");
+            background-image: url("../multimedia/HenrGifChico.gif");
         }
     }
 
     .foto3{
         background-image: url(../multimedia/destacadoLuanHor.jpg);
         &:hover{
-            background-image: url("../multimedia/LuanGifChico.jpg");
+            background-image: url("../multimedia/LuanGifChico.gif");
         }
     }
 
     .foto4{
         background-image: url(../multimedia/destacadoMariliaHor.jpg);
         &:hover{
-            background-image: url("../multimedia/MariliaGifChico.jpg");
+            background-image: url("../multimedia/MariliaGifChico.gif");
         }
     }
     .foto5{
